# tinygs_nRF52

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  app.overlay  build.sh  build_v33.sh  flash.sh  flash_v33.sh  prj.conf  sections-rom.ld  setup_zephyr.sh  sysbuild.conf
boards/heltec/heltec_mesh_node_t114/: Kconfig.defconfig  Kconfig.heltec_mesh_node_t114  board.cmake  board.yml  heltec_mesh_node_t114_nrf52840-pinctrl.dtsi  heltec_mesh_node_t114_nrf52840.dts  heltec_mesh_node_t114_nrf52840.yaml  pre_dt_board.cmake
boards/heltec/heltec_mesh_node_t114/doc/: index.rst
docs/: AUDIT.md  CONFIG.md  HA_OTBR_SETUP.md  NCS_UPGRADE_PLAN.md  TINYGS_MQTT_PROTOCOL.md  power_run_2026-04-19.md  power_run_2026-04-19b.md
docs/ncs-upgrade-baseline/: baseline-2026-04-25.txt  spi-crash-analysis.md  v33-required-changes.md
lib/AioP13/src/: AioP13.h
scripts/: baud_reset.sh  flash_device.py  gen_dashboard_gz.py  gen_worldmap_svg.py  ha_otbr_masquerade.sh  otbr_commission.sh  serial_baud_reset.py  serial_log.py  wipe_nvs.py
src/: bitcode.c  bitcode.h  font8x16.c  font8x16.h  main.cpp  mbedtls-user-config.h  tinygs_ca_cert.h  tinygs_config.cpp  tinygs_config.h  tinygs_display.cpp  tinygs_display.h  tinygs_json.cpp  tinygs_json.h  tinygs_protocol.cpp  tinygs_protocol.h  tinygs_tz.cpp  tinygs_tz.h  worldmap.h
src/hal/: ZephyrHal.cpp  ZephyrHal.h  test_ZephyrHal.cpp
src/web/: dashboard_html.h  dashboard_html_gz.h  favicon_png.h  log_backend_web.c  logo_png.h  web_ui.cpp  web_ui.h  worldmap_svg.h
tests/json_parser/: CMakeLists.txt  prj.conf
tests/json_parser/src/: main.cpp
tests/p13_propagator/: CMakeLists.txt  prj.conf
tests/p13_propagator/src/: main.cpp
